tests/compile_failures/attributes/literal_values.rs
use dioxus_sugar::attributes;

#[attributes(42)]
struct PropsInteger {}

#[attributes("span")]
struct PropsString {}

fn main() {}